Bug 322588 - kdevelop crashed when closing
Summary: kdevelop crashed when closing
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-19 20:22 UTC by Miguel Tadeu
Modified: 2013-12-01 19:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miguel Tadeu 2013-07-19 20:22:48 UTC
Application: kdevelop (4.5.1)
KDE Platform Version: 4.10.5
Qt Version: 4.8.4
Operating System: Linux 3.8.0-26-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
I noticed that there was an item in the "Stop" button drop list that never stoped, so I eventualy closed kdevelop and it crashed

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4e4fd0c7c0 (LWP 5553))]

Thread 8 (Thread 0x7f4e32ea7700 (LWP 5652)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007f4e4da580a7 in wait (time=1000, this=0x3491cc0) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=this@entry=0x346ea88, mutex=mutex@entry=0x346ea90, time=time@entry=1000) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f4e49920afb in KDevelop::DUChainPrivate::CleanupThread::run (this=0x346ea70) at ../../language/duchain/duchain.cpp:282
#4  0x00007f4e4da57bec in QThreadPrivate::start (arg=0x346ea70) at thread/qthread_unix.cpp:338
#5  0x00007f4e4b84bf8e in start_thread (arg=0x7f4e32ea7700) at pthread_create.c:311
#6  0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 7 (Thread 0x7f4e1ffcd700 (LWP 5668)):
#0  0x00007f4e4b84f07f in __pthread_mutex_unlock_usercnt (mutex=0x7f4e18000a60, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  0x00007f4e46b635f1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4e46b239c2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4e46b240fe in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f4e46b24304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f4e4db83036 in QEventDispatcherGlib::processEvents (this=0x7f4e180008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f4e4db5338f in QEventLoop::processEvents (this=this@entry=0x7f4e1ffccd90, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f4e4db53618 in QEventLoop::exec (this=this@entry=0x7f4e1ffccd90, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f4e4da55410 in QThread::exec (this=this@entry=0x348ba70) at thread/qthread.cpp:542
#9  0x00007f4e4db34edf in QInotifyFileSystemWatcherEngine::run (this=0x348ba70) at io/qfilesystemwatcher_inotify.cpp:256
#10 0x00007f4e4da57bec in QThreadPrivate::start (arg=0x348ba70) at thread/qthread_unix.cpp:338
#11 0x00007f4e4b84bf8e in start_thread (arg=0x7f4e1ffcd700) at pthread_create.c:311
#12 0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 6 (Thread 0x7f4e1dd6c700 (LWP 5676)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f4e48c95b27 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f4e48c95b59 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f4e4b84bf8e in start_thread (arg=0x7f4e1dd6c700) at pthread_create.c:311
#4  0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 5 (Thread 0x7f4d8feb2700 (LWP 5688)):
#0  0x00007f4e46b631fc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f4e46b63979 in g_private_get () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4e46b48390 in g_thread_self () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4e46b2333e in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f4e46b240b4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f4e46b24304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f4e4db83036 in QEventDispatcherGlib::processEvents (this=0x7f4d880008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#7  0x00007f4e4db5338f in QEventLoop::processEvents (this=this@entry=0x7f4d8feb1d90, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007f4e4db53618 in QEventLoop::exec (this=this@entry=0x7f4d8feb1d90, flags=...) at kernel/qeventloop.cpp:204
#9  0x00007f4e4da55410 in QThread::exec (this=this@entry=0x69fe420) at thread/qthread.cpp:542
#10 0x00007f4e4db34edf in QInotifyFileSystemWatcherEngine::run (this=0x69fe420) at io/qfilesystemwatcher_inotify.cpp:256
#11 0x00007f4e4da57bec in QThreadPrivate::start (arg=0x69fe420) at thread/qthread_unix.cpp:338
#12 0x00007f4e4b84bf8e in start_thread (arg=0x7f4d8feb2700) at pthread_create.c:311
#13 0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7f4d8ce4f700 (LWP 5854)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f4e436ed585 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f4e436ed5d9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f4e4b84bf8e in start_thread (arg=0x7f4d8ce4f700) at pthread_create.c:311
#4  0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f4d8d650700 (LWP 5857)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f4e43433a09 in JSC::BlockAllocator::blockFreeingThreadMain() () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f4e4371bcee in WTF::wtfThreadEntryPoint(void*) () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f4e4b84bf8e in start_thread (arg=0x7f4d8d650700) at pthread_create.c:311
#4  0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f4d3fffd700 (LWP 5858)):
#0  0x00007f4e46b63359 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f4e46b635b9 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4e46b2390b in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4e46b240fe in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f4e46b24304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f4e4db83036 in QEventDispatcherGlib::processEvents (this=0x7f4d80002a00, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f4e4db5338f in QEventLoop::processEvents (this=this@entry=0x7f4d3fffcdc0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f4e4db53618 in QEventLoop::exec (this=this@entry=0x7f4d3fffcdc0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f4e4da55410 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#9  0x00007f4e4da57bec in QThreadPrivate::start (arg=0x5f85350) at thread/qthread_unix.cpp:338
#10 0x00007f4e4b84bf8e in start_thread (arg=0x7f4d3fffd700) at pthread_create.c:311
#11 0x00007f4e4c75de1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f4e4fd0c7c0 (LWP 5553)):
[KCrash Handler]
#6  allLocals (this=<optimized out>) at ../../debugger/interfaces/../variable/variablecollection.h:209
#7  KDevelop::IVariableController::stateChanged (this=0x37ffc1c0, state=<optimized out>) at ../../debugger/interfaces/ivariablecontroller.cpp:58
#8  0x00007f4e4db690ef in QMetaObject::activate (sender=sender@entry=0x5f942e0, m=m@entry=0x7f4e49644e40 <KDevelop::IDebugSession::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff072a26c0) at kernel/qobject.cpp:3539
#9  0x00007f4e494213fe in KDevelop::IDebugSession::stateChanged (this=this@entry=0x5f942e0, _t1=_t1@entry=KDevelop::IDebugSession::EndedState) at ./idebugsession.moc:160
#10 0x00007f4e2a5c6564 in GDBDebugger::DebugSession::setSessionState (this=this@entry=0x5f942e0, state=state@entry=KDevelop::IDebugSession::EndedState) at ../../../debuggers/gdb/debugsession.cpp:120
#11 0x00007f4e2a5c683d in GDBDebugger::DebugSession::_gdbStateChanged (this=this@entry=0x5f942e0, oldState=..., newState=...) at ../../../debuggers/gdb/debugsession.cpp:232
#12 0x00007f4e2a5c6d56 in GDBDebugger::DebugSession::setState (this=this@entry=0x5f942e0, newState=...) at ../../../debuggers/gdb/debugsession.cpp:1368
#13 0x00007f4e2a5c73ab in GDBDebugger::DebugSession::slotKillGdb (this=0x5f942e0) at ../../../debuggers/gdb/debugsession.cpp:1141
#14 0x00007f4e2a5cf79a in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./debugsession.moc:177
#15 GDBDebugger::DebugSession::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./debugsession.moc:127
#16 0x00007f4e4db690ef in QMetaObject::activate (sender=sender@entry=0x250b5610, m=m@entry=0x7f4e4deacd80 <QSingleShotTimer::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#17 0x00007f4e4db71e70 in QSingleShotTimer::timeout (this=this@entry=0x250b5610) at .moc/release-shared/qtimer.moc:97
#18 0x00007f4e4db71e8f in QSingleShotTimer::timerEvent (this=0x250b5610) at kernel/qtimer.cpp:317
#19 0x00007f4e4db6e3ec in QObject::event (this=0x250b5610, e=<optimized out>) at kernel/qobject.cpp:1156
#20 0x00007f4e4cefa8ec in QApplicationPrivate::notify_helper (this=this@entry=0x22c3820, receiver=receiver@entry=0x250b5610, e=e@entry=0x7fff072a3120) at kernel/qapplication.cpp:4567
#21 0x00007f4e4cefd25b in QApplication::notify (this=this@entry=0x7fff072a3770, receiver=receiver@entry=0x250b5610, e=e@entry=0x7fff072a3120) at kernel/qapplication.cpp:4428
#22 0x00007f4e4e0dd1a6 in KApplication::notify (this=0x7fff072a3770, receiver=0x250b5610, event=0x7fff072a3120) at ../../kdeui/kernel/kapplication.cpp:311
#23 0x00007f4e4db5463e in QCoreApplication::notifyInternal (this=0x7fff072a3770, receiver=0x250b5610, event=event@entry=0x7fff072a3120) at kernel/qcoreapplication.cpp:946
#24 0x00007f4e4db85b72 in sendEvent (event=0x7fff072a3120, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#25 QTimerInfoList::activateTimers (this=0x22c3f90) at kernel/qeventdispatcher_unix.cpp:622
#26 0x00007f4e4db829a4 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#27 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#28 0x00007f4e46b23f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f4e46b24248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f4e46b24304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f4e4db83016 in QEventDispatcherGlib::processEvents (this=0x22c37e0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#32 0x00007f4e4cfa013e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f4e4db5338f in QEventLoop::processEvents (this=this@entry=0x7fff072a3390, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f4e4db53618 in QEventLoop::exec (this=this@entry=0x7fff072a3390, flags=...) at kernel/qeventloop.cpp:204
#35 0x00007f4e4db58cf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#36 0x00007f4e4cef8ffc in QApplication::exec () at kernel/qapplication.cpp:3828
#37 0x000000000040dcbf in main (argc=<optimized out>, argv=<optimized out>) at ../../app/main.cpp:522

Reported using DrKonqi
Comment 1 Milian Wolff 2013-12-01 19:12:29 UTC
Git commit 0139f8bbfeb20050afe3c7609398708335919638 by Milian Wolff.
Committed on 01/12/2013 at 19:09.
Pushed by mwolff into branch '1.6'.

Don't handle debugger state changes during shutdown.

M  +4    -0    debugger/interfaces/ivariablecontroller.cpp

http://commits.kde.org/kdevplatform/0139f8bbfeb20050afe3c7609398708335919638