Don't handle debugger state changes during shutdown.

BUG: 322588